[package]
name = "qbit_gluetun_port"
version = "0.1.0"
edition = "2021"

[dependencies]
qbit-rs = "0.4.6"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.96"
dotenvy = "0.15.7"
env_logger = "0.11.5"
result_logger = "0.1.1"
log = "0.4.22"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "*", features = ["vendored"] }

[profile.release]
strip = "debuginfo"  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # Enable link-time optimization.
codegen-units = 1